2002-12-20  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * linalg.h: Add determinant.
	* linalg.cpp: Ditto.

2002-03-20  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * linalg.cpp: Clean up Fortran name handling.

2002-02-07  Lieven Vanholme  <Lieven.Vanholmen@rug.ac.be>

        * linalg.h: Add support for generalised eigenproblem.
        * linalg.cpp: Ditto.